# locoloot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.env  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.dev.txt  settings.yaml
config/: gunicorn.conf.py  settings.yaml
repo/: views.py
repo/admin/: __init__.py  auto_translate.py  group.py  key.py  phrase.py  space.py
repo/management/commands/: translate_all.py
repo/migrations/: 0001_initial.py  0003_auto_20231031_1238.py
repo/models/: auto_translate.py  auto_translate_engine.py  key.py  key_group.py  load.py  phrase.py  space.py  space_language.py
repo/templates/admin/edit_inline/: repo_stacked.html
service/: settings.py
src/: manage.py
src/repo/: settings.py  views.py
src/repo/admin/: auto_translate_engine.py  key.py  load.py
src/repo/management/commands/: import_groups.py  import_phrases.py  translate_all.py
src/repo/migrations/: 0002_key_key_index.py
src/repo/models/: __init__.py  auto_translate_engine.py  group.py  load.py  space.py
src/repo/templates/admin/edit_inline/: repo_tabular.html
src/service/: asgi.py  debug_toolbar.py  urls.py  wsgi.py
src/service/settings/: base.py
